K8sConfigurations/configmaps/Sidecars/bookservice-sidecar-cb/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/tmp/access.log"
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: bookservice
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_bookservice
                  timeout: 2s
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: local_bookservice
    max_requests_per_connection: 1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 200
          max_requests: 200
          max_pending_requests: 50
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
